--- a/index.html
+++ b/index.html
@@ -6,60 +6,94 @@
     <title>Pembelajaran Desain Grafis dengan Canva</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #FFFFFF; /* Putih */
             color: #333;
+            line-height: 1.6;
         }
         header {
-            background-color: #4CAF50;
+            background: linear-gradient(135deg, #007BFF, #0056b3); /* Gradien biru */
             color: white;
             text-align: center;
-            padding: 20px;
+            padding: 30px 20px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        header .logo {
+            display: inline-block;
+            margin-bottom: 10px;
+        }
+        header .logo svg {
+            width: 50px;
+            height: 50px;
         }
         nav {
-            background-color: #333;
+            background-color: #007BFF; /* Biru */
             overflow: hidden;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         nav a {
             float: left;
             display: block;
             color: white;
             text-align: center;
-            padding: 14px 16px;
+            padding: 16px 20px;
             text-decoration: none;
+            transition: background-color 0.3s ease;
         }
         nav a:hover {
-            background-color: #ddd;
-            color: black;
+            background-color: #0056b3; /* Biru gelap */
         }
         .container {
             max-width: 1200px;
             margin: 20px auto;
             padding: 20px;
-            background: white;
+            background: #FFFFFF; /* Putih */
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         .section {
             display: none;
             margin-bottom: 20px;
+            animation: fadeIn 0.5s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
         .active {
             display: block;
         }
+        .card {
+            background: #F8F9FA; /* Abu-abu terang untuk kartu */
+            border: 1px solid #E9ECEF;
+            border-radius: 8px;
+            padding: 20px;
+            margin: 10px 0;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+        .card h3 {
+            color: #007BFF; /* Biru */
+            margin-top: 0;
+        }
         button {
-            background-color: #4CAF50;
+            background-color: #007BFF; /* Biru */
             color: white;
             border: none;
-            padding: 10px 20px;
+            padding: 12px 24px;
             cursor: pointer;
             border-radius: 4px;
-            margin: 10px 0;
+            transition: background-color 0.3s ease;
+            font-size: 16px;
         }
         button:hover {
-            background-color: #45a049;
+            background-color: #0056b3; /* Biru gelap */
         }
         .quiz {
             margin-top: 20px;
@@ -72,20 +106,22 @@
             font-weight: bold;
         }
         .simulation {
-            border: 1px solid #ccc;
-            padding: 10px;
+            border: 1px solid #007BFF; /* Biru */
+            padding: 15px;
             margin: 10px 0;
-            background: #f9f9f9;
+            background: #F0F8FF; /* Biru muda */
+            border-radius: 8px;
         }
         .step {
             cursor: pointer;
-            padding: 10px;
+            padding: 12px;
             margin: 5px 0;
-            background: #e7e7e7;
+            background: #E3F2FD; /* Biru sangat muda */
             border-radius: 4px;
+            transition: background-color 0.3s ease;
         }
         .step:hover {
-            background: #ddd;
+            background: #BBDEFB; /* Biru lebih gelap */
         }
         .video-container {
             margin: 20px 0;
@@ -97,8 +133,32 @@
             height: 315px;
             border: none;
             border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-        @media (max-width: 600px) {
+        footer {
+            background: linear-gradient(135deg, #007BFF, #0056b3); /* Gradien biru */
+            color: white;
+            text-align: center;
+            padding: 20px;
+            margin-top: 40px;
+        }
+        footer a {
+            color: #BBDEFB; /* Biru muda */
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        footer a:hover {
+            color: white;
+        }
+        @media (max-width: 768px) {
+            nav a {
+                float: none;
+                display: block;
+                text-align: left;
+            }
+            .container {
+                padding: 10px;
+            }
             .video-iframe {
                 height: 250px;
             }
@@ -107,8 +167,13 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white">
+                <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5V9l-10 5-10-5v8z"/>
+            </svg>
+        </div>
         <h1>Pembelajaran Interaktif: Desain Grafis dengan Canva</h1>
-        <p>Mulai dari nol hingga mahir menggunakan Canva untuk desain grafis.</p>
+        <p>Mulai dari nol hingga mahir menggunakan Canva untuk desain grafis kreatif.</p>
     </header>
     <nav>
         <a href="#" onclick="showSection('intro')">Beranda</a>
@@ -120,93 +185,112 @@
     </nav>
     <div class="container">
         <div id="intro" class="section active">
-            <h2>Selamat Datang!</h2>
-            <p>Website ini akan membimbing Anda belajar desain grafis menggunakan Canva. Canva adalah alat online gratis yang mudah digunakan untuk membuat poster, infografis, dan lainnya. Klik menu di atas untuk mulai.</p>
-            <p><strong>Apa yang akan Anda pelajari:</strong></p>
-            <ul>
-                <li>Dasar-dasar antarmuka Canva.</li>
-                <li>Menambahkan elemen dan teks.</li>
-                <li>Tips desain lanjutan.</li>
-                <li>Quiz untuk menguji pengetahuan.</li>
-                <li>Simulasi langkah-langkah praktis.</li>
-                <li>Video tutorial interaktif dari YouTube.</li>
-            </ul>
+            <div class="card">
+                <h2>Selamat Datang!</h2>
+                <p>Website ini akan membimbing Anda belajar desain grafis menggunakan Canva. Canva adalah alat online gratis yang mudah digunakan untuk membuat poster, infografis, dan lainnya. Klik menu di atas untuk mulai.</p>
+                <p><strong>Apa yang akan Anda pelajari:</strong></p>
+                <ul>
+                    <li>Dasar-dasar antarmuka Canva.</li>
+                    <li>Menambahkan elemen dan teks.</li>
+                    <li>Tips desain lanjutan.</li>
+                    <li>Quiz untuk menguji pengetahuan.</li>
+                    <li>Simulasi langkah-langkah praktis.</li>
+                    <li>Video tutorial interaktif dari YouTube.</li>
+                </ul>
+                <img src="https://via.placeholder.com/600x300/007BFF/FFFFFF?text=Canva+Interface" alt="Canva Interface" style="width:100%; border-radius:8px;">
+            </div>
         </div>
         <div id="basic" class="section">
-            <h2>Tutorial Dasar Canva</h2>
-            <p>Ikuti langkah-langkah ini untuk memulai:</p>
-            <ol>
-                <li>Buka <a href="https://www.canva.com" target="_blank">canva.com</a> dan buat akun gratis.</li>
-                <li>Pilih template (misalnya, "Poster") dari galeri.</li>
-                <li>Tambahkan teks dengan mengklik ikon "T" dan ketik pesan Anda.</li>
-                <li>Tambahkan gambar dari tab "Elements" atau upload milik Anda.</li>
-                <li>Edit warna dan ukuran elemen dengan panel sisi.</li>
-                <li>Unduh hasilnya sebagai PNG atau PDF.</li>
-            </ol>
-            <button onclick="toggleTutorial('basic')">Sembunyikan/Tampilkan Detail</button>
-            <div id="basic-detail" style="display: none;">
-                <p><strong>Tips:</strong> Gunakan grid untuk alignment yang rapi. Coba berbagai font untuk suasana berbeda.</p>
+            <div class="card">
+                <h3>Tutorial Dasar Canva</h3>
+                <p>Ikuti langkah-langkah ini untuk memulai:</p>
+                <ol>
+                    <li>Buka <a href="https://www.canva.com" target="_blank">canva.com</a> dan buat akun gratis.</li>
+                    <li>Pilih template (misalnya, "Poster") dari galeri.</li>
+                    <li>Tambahkan teks dengan mengklik ikon "T" dan ketik pesan Anda.</li>
+                    <li>Tambahkan gambar dari tab "Elements" atau upload milik Anda.</li>
+                    <li>Edit warna dan ukuran elemen dengan panel sisi.</li>
+                    <li>Unduh hasilnya sebagai PNG atau PDF.</li>
+                </ol>
+                <button onclick="toggleTutorial('basic')">Sembunyikan/Tampilkan Detail</button>
+                <div id="basic-detail" style="display: none;">
+                    <p><strong>Tips:</strong> Gunakan grid untuk alignment yang rapi. Coba berbagai font untuk suasana berbeda.</p>
+                </div>
             </div>
         </div>
         <div id="advanced" class="section">
-            <h2>Tutorial Lanjutan</h2>
-            <p>Tingkatkan desain Anda:</p>
-            <ul>
-                <li>Gunakan "Magic Design" untuk saran otomatis.</li>
-                <li>Buat animasi dengan "Animate" tab.</li>
-                <li>Integrasikan dengan brand kit untuk konsistensi.</li>
-                <li>Ekspor untuk berbagai platform (Instagram, Facebook).</li>
-            </ul>
-            <button onclick="toggleTutorial('advanced')">Sembunyikan/Tampilkan Detail</button>
-            <div id="advanced-detail" style="display: none;">
-                <p><strong>Contoh:</strong> Untuk poster event, gunakan warna kontras dan hierarki teks (judul besar, deskripsi kecil).</p>
+            <div class="card">
+                <h3>Tutorial Lanjutan</h3>
+                <p>Tingkatkan desain Anda:</p>
+                <ul>
+                    <li>Gunakan "Magic Design" untuk saran otomatis.</li>
+                    <li>Buat animasi dengan "Animate" tab.</li>
+                    <li>Integrasikan dengan brand kit untuk konsistensi.</li>
+                    <li>Ekspor untuk berbagai platform (Instagram, Facebook).</li>
+                </ul>
+                <button onclick="toggleTutorial('advanced')">Sembunyikan/Tampilkan Detail</button>
+                <div id="advanced-detail" style="display: none;">
+                    <p><strong>Contoh:</strong> Untuk poster event, gunakan warna kontras dan hierarki teks (judul besar, deskripsi kecil).</p>
+                </div>
             </div>
         </div>
         <div id="quiz" class="section">
-            <h2>Quiz Interaktif</h2>
-            <div class="quiz">
-                <p>1. Apa yang pertama kali Anda lakukan di Canva?</p>
-                <input type="radio" name="q1" value="a"> Buat akun<br>
-                <input type="radio" name="q1" value="b"> Pilih template<br>
-                <input type="radio" name="q1" value="c"> Unduh gambar<br>
-                <button onclick="checkAnswer(1, 'a')">Jawab</button>
-                <div id="feedback1" class="feedback"></div>
-            </div>
-            <div class="quiz">
-                <p>2. Di mana Anda menambahkan teks di Canva?</p>
-                <input type="radio" name="q2" value="a"> Tab Elements<br>
-                <input type="radio" name="q2" value="b"> Ikon "T"<br>
-                <input type="radio" name="q2" value="c"> Panel Upload<br>
-                <button onclick="checkAnswer(2, 'b')">Jawab</button>
-                <div id="feedback2" class="feedback"></div>
+            <div class="card">
+                <h3>Quiz Interaktif</h3>
+                <div class="quiz">
+                    <p>1. Apa yang pertama kali Anda lakukan di Canva?</p>
+                    <input type="radio" name="q1" value="a"> Buat akun<br>
+                    <input type="radio" name="q1" value="b"> Pilih template<br>
+                    <input type="radio" name="q1" value="c"> Unduh gambar<br>
+                    <button onclick="checkAnswer(1, 'a')">Jawab</button>
+                    <div id="feedback1" class="feedback"></div>
+                </div>
+                <div class="quiz">
+                    <p>2. Di mana Anda menambahkan teks di Canva?</p>
+                    <input type="radio" name="q2" value="a"> Tab Elements<br>
+                    <input type="radio" name="q2" value="b"> Ikon "T"<br>
+                    <input type="radio" name="q2" value="c"> Panel Upload<br>
+                    <button onclick="checkAnswer(2, 'b')">Jawab</button>
+                    <div id="feedback2" class="feedback"></div>
+                </div>
             </div>
         </div>
         <div id="simulation" class="section">
-            <h2>Simulasi Langkah-Langkah Canva</h2>
-            <p>Klik langkah-langkah di bawah untuk simulasi virtual:</p>
-            <div class="simulation">
-                <div class="step" onclick="simulateStep(1)">Langkah 1: Buka Canva dan pilih template</div>
-                <div class="step" onclick="simulateStep(2)">Langkah 2: Tambahkan teks</div>
-                <div class="step" onclick="simulateStep(3)">Langkah 3: Tambahkan gambar</div>
-                <div class="step" onclick="simulateStep(4)">Langkah 4: Edit dan unduh</div>
+            <div class="card">
+                <h3>Simulasi Langkah-Langkah Canva</h3>
+                <p>Klik langkah-langkah di bawah untuk simulasi virtual:</p>
+                <div class="simulation">
+                    <div class="step" onclick="simulateStep(1)">Langkah 1: Buka Canva dan pilih template</div>
+                    <div class="step" onclick="simulateStep(2)">Langkah 2: Tambahkan teks</div>
+                    <div class="step" onclick="simulateStep(3)">Langkah 3: Tambahkan gambar</div>
+                    <div class="step" onclick="simulateStep(4)">Langkah 4: Edit dan unduh</div>
+                </div>
+                <div id="sim-result"></div>
             </div>
-            <div id="sim-result"></div>
         </div>
         <div id="videos" class="section">
-            <h2>Video Tutorial Interaktif</h2>
-            <p>Tonton video tutorial berikut untuk panduan visual. Klik tombol untuk membuka video.</p>
-            <div class="video-container">
-                <h3>Video 1: Pengantar Canva</h3>
-                <button onclick="toggleVideo('video1')">Tonton Video 1</button>
-                <iframe id="video1" class="video-iframe" src="https://www.youtube.com/embed/jzWxBuvwuwQ" allowfullscreen></iframe>
-            </div>
-            <div class="video-container">
-                <h3>Video 2: Tips Desain Grafis di Canva</h3>
-                <button onclick="toggleVideo('video2')">Tonton Video 2</button>
-                <iframe id="video2" class="video-iframe" src="https://www.youtube.com/embed/Llnmf5BXLBA" allowfullscreen></iframe>
+            <div class="card">
+                <h3>Video Tutorial Interaktif</h3>
+                <p>Tonton video tutorial berikut untuk panduan visual. Klik tombol untuk membuka video.</p>
+                <div class="video-container">
+                    <h4>Video 1: Pengantar Canva</h4>
+                    <button onclick="toggleVideo('video1')">Tonton Video 1</button>
+                    <iframe id="video1" class="video-iframe" src="https://www.youtube.com/embed/jzWxBuvwuwQ" allowfullscreen></iframe>
+                </div>
+                <div class="video-container">
+                    <h4>Video 2: Tips Desain Grafis di Canva</h4>
+                    <button onclick="toggleVideo('video2')">Tonton Video 2</button>
+                    <iframe id="video2" class="video-iframe" src="https://www.youtube.com/embed/Llnmf5BXLBA" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2023 Pembelajaran Canva. Dibuat untuk edukasi.</p>
+        <a href="https://www.canva.com" target="_blank">Kunjungi Canva</a> |
+        <a href="#" target="_blank">Facebook</a> |
+        <a href="#" target="_blank">Instagram</a>
+    </footer>
     <script>
         function showSection(sectionId) {
             const sections = document.querySelectorAll('.section');
@@ -224,10 +308,10 @@
             const feedback = document.getElementById(`feedback${question}`);
             if (selected && selected.value === correct) {
                 feedback.textContent = 'Benar! 🎉';
-                feedback.style.color = 'green';
+                feedback.style.color = '#28a745'; /* Hijau untuk benar */
             } else {
                 feedback.textContent = 'Salah, coba lagi.';
-                feedback.style.color = 'red';
+                feedback.style.color = '#dc3545'; /* Merah untuk salah */
             }
         }
 
