--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     --bg:#f4f6f8;
     --dark:#1f2937;
 }
+
+.content img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 20px auto;
+}
+
 /* =========================
    BATASI LEBAR KONTEN
 ========================= */
@@ -119,11 +127,10 @@ nav a:hover{
     opacity:0.8;
 }
 
-/* SECTION */
 section{
-    padding:100px 10% 80px;
-    animation:fadeUp 1s ease forwards;
+    padding:100px 20px 80px;
 }
+
 
 @keyframes fadeUp{
     from{opacity:0; transform:translateY(40px);}
@@ -411,7 +418,7 @@ Setelah itu, peserta didik melakukan penyesuaian elemen desain, mulai dari penga
 </div>
 </section>
 
-<section id="quiz" class="section" class="fade-scroll">
+<section id="quiz" class="section fade-scroll">
     <h2 class="section-title reveal">Quiz Evaluasi</h2>
 
     <div class="quiz-box reveal" id="quizForm">
